[package]
name = "ani_ligtas"
version = "0.1.0"
edition = "2021"
description = "On-chain disaster relief fund and crop-loss claims for Filipino farming cooperatives on Stellar"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.0.0" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

# ---------------------------------------------------------------------------
# Release profile — compact Wasm output required by Soroban
# ---------------------------------------------------------------------------
[profile.release]
opt-level = "z"        # Optimise for binary size
overflow-checks = true
debug = false
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"        # No stack unwinding in Wasm

[profile.release-with-logs]
inherits = "release"
debug-assertions = true  # Enables soroban logging macros during debug builds